--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -9874,8 +9874,8 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background-color: #FFFFFF;
+  background-image: linear-gradient(180deg, #FFFFFF 10%, #FFFFFF 100%);
   background-size: cover;
 }
 
@@ -10803,7 +10803,9 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url("../img/logo.jpg");
+  width: 100px;
+  height : 500px;
   background-position: center;
   background-size: cover;
 }
