--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -10811,13 +10811,17 @@ a:focus {
 }
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
+  background: url("../img/logo2.jpg");
+  width: 100px;
+  height : 500px;
   background-position: center;
   background-size: cover;
 }
 
 .bg-password-image {
-  background: url("https://source.unsplash.com/oWTW-jNGl9I/600x800");
+  background: url("../img/logo3.jpg");
+  width: 100px;
+  height : 500px;
   background-position: center;
   background-size: cover;
 }
